--- a/JavaFXCrud2022Sqlite/src/main/resources/com/example/javafxcrud2022sqlite/hello-view.fxml
+++ b/JavaFXCrud2022Sqlite/src/main/resources/com/example/javafxcrud2022sqlite/hello-view.fxml
@@ -1,16 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.javafxcrud2022sqlite.HelloController">
+<VBox alignment="CENTER" prefHeight="672.0" prefWidth="534.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxcrud2022sqlite.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <TableView fx:id="tblAlumnos" onMouseClicked="#callbackClicTabla" onMousePressed="#callbackClicTabla" prefHeight="153.0" prefWidth="494.0">
+     <columns>
+       <TableColumn fx:id="colId" prefWidth="75.0" text="Id" />
+       <TableColumn fx:id="colNombre" prefWidth="75.0" text="Nombre" />
+         <TableColumn fx:id="colApellidos" prefWidth="75.0" text="Apellidos" />
+         <TableColumn fx:id="colDNI" prefWidth="75.0" text="DNI" />
+         <TableColumn fx:id="colFechaNacimiento" prefWidth="75.0" text="Fecha Nac." />
+     </columns>
+   </TableView>
+   <Label text="Id" />
+   <TextField fx:id="txtId" prefHeight="25.0" prefWidth="428.0" promptText="Id" />
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label fx:id="welcomeText" />
+   <Label text="Nombre" />
+   <TextField fx:id="txtNombre" promptText="Nombre" />
+   <TextField fx:id="txtApellidos" promptText="Apellidos" />
+   <TextField fx:id="txtDNI" promptText="DNI" />
+   <TextField fx:id="txtFechaNacimiento" promptText="Fecha Nacimiento" />
+   <HBox prefHeight="100.0" prefWidth="200.0">
+      <children>
+         <Button fx:id="btnModificar" mnemonicParsing="false" onAction="#modificar" text="Modificar" />
+         <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#borrar" text="Eliminar" />
+         <Button fx:id="btnInsertar" mnemonicParsing="false" onAction="#insertar" text="Insertar" />
+      </children>
+   </HBox>
 </VBox>
