--- a/primerspring/src/main/resources/templates/tienda.html
+++ b/primerspring/src/main/resources/templates/tienda.html
@@ -1,23 +1,54 @@
-<!-- Jose Antonio Alacid Pérez -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tienda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <h1>Tienda</h1>
 
     <div class="container">
-        <div class="row" th:each="producto:${lista}">
+        <div th:each="producto:${lista}" class="row">
+
             <div class="col-1" th:text="${producto.id}"></div>
-            <div class="col" th:text="${producto.nombre}"></div>
-            <div class="col" th:text="${producto.descripcion}"></div>
-            <div class="col" th:text="${producto.precio} + ' €'"></div>
-            <div class="col"><img th:src="'img/' + ${producto.imagen}" style="height: 100px;"></div>
+            <div class="col-2" th:text="${producto.nombre}"></div>
+            <div class="col-4" th:text="${producto.descripcion}"></div>
+            <div class="col-1" th:text="${producto.precio} + ' €'"></div>
+            <div class="col-2"><img th:src="'img/' + ${producto.imagen}" style="height: 100px;"></div>
+
         </div>
     </div>
+
+    <!--
+    <div class="container">
+
+        <div id="carouselExample" class="carousel slide">
+
+            <div class="carousel-inner">
+
+                <div th:each="producto:${lista}" class="carousel-item active">
+                    <img th:src="'img/' + ${producto.imagen}" class="d-block w-100">
+                </div>
+
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+
+        </div>
+
+    </div>
+    -->
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
