--- a/peliculon/src/main/resources/templates/detalle.html
+++ b/peliculon/src/main/resources/templates/detalle.html
@@ -2,16 +2,16 @@
 <html lang="es" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Inicio del proyecto Blog</title>
+    <title>Pelicula</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<h2 th:text="${pelicula.titulo}"></h2>
+<h1 th:text="${pelicula.titulo}"></h1>
 <p th:text="${pelicula.sinopsis}"></p>
 <p th:text="${pelicula.fecha}"></p>
 <p th:text="${pelicula.nacionalidad}"></p>
-<img th:scr="'img/' + ${pelicula.img}">
+<img th:src="'/img/' + ${pelicula.img}">
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
