--- a/peliculon/src/main/resources/templates/detalle.html
+++ b/peliculon/src/main/resources/templates/detalle.html
@@ -2,20 +2,19 @@
 <html lang="es" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Pelicula</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Title</title>
 </head>
 <body>
-<h1 th:text="${pelicula.titulo}"></h1>
-<p th:text="${pelicula.sinopsis}"></p>
-<p th:text="${pelicula.fecha}"></p>
-<p th:text="${pelicula.nacionalidad}"></p>
-<img th:src="'/img/' + ${pelicula.img}">
+    <h1 th:text="${pelicula.titulo}"></h1>
+    <p th:text="${pelicula.sinopsis}"></p>
+    <p th:text="${pelicula.nacionalidad} + ' - ' + ${pelicula.fecha}"></p>
+    <img th:src="'/img/' + ${pelicula.imagen}">
+    <iframe width="560" height="315" th:src="${pelicula.trailer}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    <div th:each="comentario:${comentarios}">
+        <h3 th:text="${comentario.titulo}"></h3>
+        <p th:text="${comentario.fecha}"></p>
+        <p th:text="${comentario.contenido}"></p>
+    </div>
 </body>
 </html>
