--- a/peliculon/src/main/resources/templates/index.html
+++ b/peliculon/src/main/resources/templates/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="https://thymeleaf.org">
+<html lang="es" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>El Peliculón</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <h1>El peliculón by Cesur</h1>
     <div th:each="pelicula:${cartelera}">
-        <h2 class="col"><a th:href="'/pelicula/' + ${pelicula.id}" th:text="${pelicula.titulo}"></a></h2>
+
+        <a th:href=" '/pelicula/' + ${pelicula.id}">
+            <h2 th:text="${pelicula.titulo}"></h2>
+        </a>
+
+
+
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+
 </body>
 </html>
