--- a/peliculon/src/main/resources/templates/crud.html
+++ b/peliculon/src/main/resources/templates/crud.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <div class="container">
-        <a href="/add" class="btn btn-primary">Añadir película</a>
+        <!--La url de href debe aparecer en el controlador para mostrar el formulario que añade registros-->
+        <a href="/crud/add" class="btn btn-primary">Añadir película</a>
         <table class="table stripped">
             <tr>
                 <th>Id</th>
@@ -25,11 +26,13 @@
                 <td th:text="${#strings.substring(p.sinopsis,0,15)}"></td>
                 <td th:text="${p.fecha}"></td>
                 <td th:text="${p.nacionalidad}"></td>
-                <td th:src="'/img/' + ${p.imagen}" style="height: 100px;"></td>
+                <td><img th:src="${p.imagen}" style="height: 100px;"></td>
                 <td>
+                    <!--La URL de th:href es un GetMapping que he puesto en el controlador-->
                     <a th:href="'/crud/update/' + ${p.id}" class="btn btn-primary">Modificar</a>
                 </td>
                 <td>
+                    <!--La URL de th:href es un GetMapping que he puesto en el controlador-->
                     <a th:href="'/crud/delete/' + ${p.id}" class="btn btn-danger">Borrar</a>
                 </td>
             </tr>
