--- a/peliculon/src/main/resources/templates/detalle.html
+++ b/peliculon/src/main/resources/templates/detalle.html
@@ -3,20 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <h1 th:text="${pelicula.titulo}"></h1>
+    <div class="container">
+        <h1 th:text="${p.titulo}"></h1>
 
-    <p th:text="${pelicula.sinopsis}"></p>
-    <p th:text="${pelicula.nacionalidad} + ' - ' + ${pelicula.fecha}"></p>
-    <img th:src="'/img/' + ${pelicula.imagen}">
+        <p th:text="${p.sinopsis}"></p>
+        <p th:text="${p.nacionalidad} + ' - ' + ${p.fecha}"></p>
+        <img th:src="'/img/' + ${p.imagen}">
 
-    <iframe width="560" height="315" th:src="${pelicula.trailer}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" th:src="${p.trailer}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-    <div th:each="comentario:${comentarios}">
-        <h4 th:text="${comentario.titulo}"></h4>
-        <p th:text="${comentario.fecha}"></p>
-        <p th:text="${comentario.contenido}"></p>
+        <div th:each="comentario:${comentarios}">
+            <h4 th:text="${comentario.titulo}"></h4>
+            <p th:text="${comentario.fecha}"></p>
+            <p th:text="${comentario.contenido}"></p>
+        </div>
+
+        <form action="/comentario/add" th:object="${nuevoComentario}" method="post">
+            <input type="hidden" name="idPelicula" th:value="${p.id}">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="titulo">Título</label>
+                    <input type="text" class="form-control" name="titulo" id="titulo" th:field="*{titulo}" value="Munich" required>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="contenido"></label>
+                    <textarea class="form-control" name="contenido" id="contenido" rows="3" th:field="*{contenido}" required></textarea>
+                </div>
+            </div>
+            <input type="submit" class="btn btn-primary" value="Enviar">
+        </form>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
