--- a/stormcount/src/main/resources/templates/register.html
+++ b/stormcount/src/main/resources/templates/register.html
@@ -12,20 +12,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" th:fragment="header">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/}">Registration and Login System</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </nav>
-<br />
-<br />
-<br />
+<br/>
+<br/>
+<br/>
 <div class="container">
     <div class="row col-md-8 offset-md-2">
         <div class="card">
             <div th:if="${param.success}">
                 <div class="alert alert-info">You've successfully registered
-                    to our app!</div>
+                    to our app!
+                </div>
             </div>
             <div class="card-header">
                 <h2 class="text-center">Registration</h2>
@@ -97,5 +99,6 @@
         </div>
     </div>
 </div>
+<div th:insert="components/fragments :: nav_bar"></div>
 </body>
 </html>
