--- a/stormcount/src/main/resources/templates/form_add_userCard.html
+++ b/stormcount/src/main/resources/templates/form_add_userCard.html
@@ -13,18 +13,26 @@
             <input type="hidden" class="form-control" th:field="*{id}">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="title">Title</label>
-                    <input type="text" class="form-control" name="title" id="title" th:field="*{title}" value="Munich" required>
+                    <label for="quantity">Quantity</label>
+                    <input type="number" class="form-control" name="quantity" id="quantity" th:field="*{quantity}" value="Munich" required>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="text">Text</label>
-                    <textarea class="form-control" name="text" id="text" rows="3" th:field="*{text}" required></textarea>
+                    <label for="card">Card</label>
+                    <select class="form-control" name="card" id="card" required>
+                        <option th:each="c:${cards}" th:value="${c.id}" th:text="${c.cardname}"></option>
+                    </select>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <button type="submit" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
 </form>
+<p><a href="/collection" class="btn btn-primary">Back to listing</a></p>
 </body>
 </html>
