--- a/stormcount/src/main/resources/templates/articles.html
+++ b/stormcount/src/main/resources/templates/articles.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 <div th:insert="components/fragments :: nav_bar"></div>
-<div th:each="article:${articles}">
-    <div class="card" style="width: 18rem;">
+<div class="container">
+    <div class="row row-cols-1 row-cols-md-5 g-2">
+<div th:each="article:${articles}" class="col">
+    <div class="card w-100" style="height: 300px;">
         <img th:src="${article.img}" class="card-img-top" th:alt="'article image: ' + ${article.title}">
         <div class="card-body">
             <h2 class="card-title" th:text="${article.title}"></h2>
@@ -17,6 +19,9 @@
         </div>
     </div>
 </div>
+    </div>
+</div>
+<div th:insert="components/fragments :: nav_bar"></div>
 <div th:insert="components/fragments :: footer"></div>
 </body>
 </html>
