--- a/stormcount/src/main/resources/templates/crud.html
+++ b/stormcount/src/main/resources/templates/crud.html
@@ -23,7 +23,7 @@
         <tr th:each="a:${articles}">
             <td th:text="${a.id}"></td>
             <td th:text="${a.title}"></td>
-            <td th:text="${#strings.substring(a.text,0,15)}"></td>
+            <td th:text="${a.text.length < 15 ? a.text : #strings.substring(a.text,0,15)}"></td>
             <td th:text="${a.publishing}"></td>
             <td th:text="${a.author}"></td>
             <td><img th:src="${a.img}" style="height: 100px;"></td>
